--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script type="text/javascript">
 
 function go_get(){
- var base_url = 'http://www.youtube.com/embed?listType=search&list=';
+ var base_url = 'https://www.youtube.com/embed?listType=search&list=';
  var search_field = document.getElementById('yourtextfield').value;
  var target_url = base_url + search_field;
  var ifr = document.getElementById('youriframe');
