--- a/index.html
+++ b/index.html
@@ -4,252 +4,15 @@
 <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
 <div id="player"></div>
 
+<script type="text/javascript" src=pedals.js></script>
+
 <form onsubmit="go_get(); return false;">
     <input type="text" id="yourtextfield"/>
     <input type="submit" value="Search Playlists"/>
 </form>
 
 
-<script type="text/javascript">
-    var video_id = null;
 
-    function go_get() {
-        openPedals();
-        var search_field = document.getElementById('yourtextfield').value;
-        video_id = search_field.substring("https://youtu.be/".length);
-
-        // 2. This code loads the IFrame Player API code asynchronously.
-        var tag = document.createElement('script');
-
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-    }
-
-    // 3. This function creates an <iframe> (and YouTube player)
-    //    after the API code downloads.
-    var player;
-
-    function onYouTubeIframeAPIReady() {
-        player = new YT.Player('player', {
-            height: '390',
-            width: '640',
-            videoId: video_id,
-            playerVars: {
-                'playsinline': 1
-            },
-            events: {
-                'onReady': onPlayerReady,
-                'onStateChange': onPlayerStateChange
-            }
-        });
-    }
-
-    // 4. The API will call this function when the video player is ready.
-    function onPlayerReady(event) {
-        event.target.playVideo();
-    }
-
-    // 5. The API calls this function when the player's state changes.
-    //    The function indicates that when playing a video (state=1),
-    //    the player should play for six seconds and then stop.
-    var done = false;
-
-    function onPlayerStateChange(event) {
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-            setTimeout(stopVideo, 6000);
-            done = true;
-        }
-    }
-
-    function stopVideo() {
-        player.stopVideo();
-    }
-
-    async function openPedals() {
-        let device;
-        try {
-            const devices = await navigator.hid.requestDevice({
-                filters: [
-                    // Old VEC
-                    {
-                        vendorId: 0x05f3,
-                        productId: 0x00ff,
-                    },
-                    // Philips old version
-                    {
-                        vendorId: 0x0911,
-                        productId: 0x184c,
-                    },
-                    // Philips
-                    {
-                        vendorId: 0x0911,
-                        productId: 0x1844,
-                    },
-                    // Philips Foot Control LFH 2330/00
-                    {
-                        vendorId: 0x0911,
-                        productId: 0x091a,
-                    },
-                    // Infinity
-                    {
-                        vendorId: 0x0e0f,
-                        productId: 0x0003,
-                    },
-                    // Grundig pedals
-                    {
-                        vendorId: 0x15d8,
-                        productId: 0x0024,
-                    },
-                    // Olympus
-                    {
-                        vendorId: 0x07b4,
-                        productId: 0x0218,
-                    },
-                    // Olympus RS31H in Olympus mode
-                    {
-                        vendorId: 0x07b4,
-                        productId: 0x025f,
-                    },
-                    // Olympus hand controller
-                    {
-                        vendorId: 0x07b4,
-                        productId: 0x26E,
-                    },
-                    // DictaPhone pedal
-                    {
-                        vendorId: 0x04b4,
-                        productId: 0x0100,
-                    },
-                    {
-                        vendorId: 0x04b4,
-                        productId: 0x0100,
-                    },
-                ],
-            });
-            device = devices[0];
-        } catch (error) {
-            console.log("An error occurred.");
-        }
-
-        if (!device) {
-            console.log("No device was selected.");
-        } else {
-            console.log(`HID: ${device.productName}`);
-        }
-    }
-
-    var LEFT = 1;
-    var MIDDLE = 4;
-    var RIGHT = 2;
-
-    function convertBytes(buffer, vid, pid) {
-        // VEC
-        let button = 0;
-        let left = 0;
-        let right = 0;
-        let middle = 0;
-        // Old vec
-        if (vid == 0x05f3 && pid == 0x00ff) {
-            button = buffer[1];
-            left = 1;
-            right = 4;
-            middle = 2;
-        }
-        // Philips old version
-        if (vid == 0x0911 && pid == 0x184c) {
-            button = buffer[1];
-            left = 1;
-            right = 2;
-            middle = 4;
-        }
-        // Philips
-        if (vid == 0x0911 && pid == 0x1844) {
-            button = buffer[1];
-            left = 1;
-            right = 2;
-            middle = 4;
-        }
-
-        // Philips Foot Control LFH 2330/00
-        if (vid == 0x0911 && pid == 0x091a) {
-            button = buffer[1];
-            left = 4;
-            right = 1;
-            middle = 2;
-        }
-        // Infinity
-        if (vid == 0x0e0f && pid == 0x0003) {
-            button = buffer[1];
-            left = 4;
-            right = 2;
-            middle = 1;
-        }
-        // Grundig pedals
-        if (vid == 0x15d8 && pid == 0x0024) {
-            button = buffer[1];
-            left = 4;
-            right = 2;
-            middle = 1;
-        }
-        // Olympus
-        if (vid == 0x07b4 && pid == 0x0218) {
-            button = buffer[3];
-            left = 1;
-            right = 2;
-            middle = 4;
-        }
-        // Olympus RS31H in Olympus mode
-        if (vid == 0x07b4 && pid == 0x025f) {
-            button = buffer[3];
-            left = 4;
-            right = 1;
-            middle = 2;
-        }
-        // Olympus hand controller
-        if (vid == 0x07b4 && pid == 0x26E) {
-            button = buffer[3];
-            left = 4;
-            right = 1;
-            middle = 2;
-        }
-        // Grundig sonicmic
-        if (vid == 0x15d8 && pid == 0x025) {
-            if (buffer[1] == 1) {
-                button = buffer[7];
-                left = 4;
-                right = 16;
-                middle = 8;
-            }
-        }
-        // DictaPhone pedal
-        if (vid == 0x04b4 && pid == 0x0100) {
-            button = buffer[1];
-            left = 1;
-            right = 2;
-            middle = 4;
-        }
-
-        // Use F1, F2, F3 on Speechmike to simulate
-        if (vid == 0x911 && pid == 0xC1C) {
-            button = buffer[8];
-            left = 2;
-            right = 8;
-            middle = 4;
-        }
-
-
-        let toSet = 0;
-        if (0 != (button & left))
-            toSet += UsbConstants.VecPedals.LEFT;
-        if (0 != (button & right))
-            toSet += UsbConstants.VecPedals.RIGHT;
-        if (0 != (button & middle))
-            toSet += UsbConstants.VecPedals.MIDDLE;
-        return toSet;
-    }
-
-</script>
 </body>
 </html>
 
