--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 <script type="text/javascript" src=pedals.js></script>
 
-<form onsubmit="go_get(); return false;">
-    <input type="text" id="yourtextfield"/>
-    <input type="submit" value="Search Playlists"/>
+<form onsubmit="loadVideo(); return false;">
+    <input type="text" id="youtubeLink"/>
+    <input type="submit" value="Load video"/>
 </form>
 
 <script type="text/javascript">
