--- a/notes.html
+++ b/notes.html
@@ -1,56 +1,205 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+    font-family: 'Segoe UI', Arial, sans-serif;
+    background: #f7f7fa;
+    color: #222;
+    margin: 0;
+    padding: 0;
+}
+.container {
+    max-width: 600px;
+    margin: 40px auto;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+    padding: 32px 28px 28px 28px;
+}
+.info-box {
+    background: #e3eafc;
+    border-left: 5px solid #4a90e2;
+    padding: 18px 20px;
+    border-radius: 8px;
+    margin-bottom: 28px;
+    font-size: 1.08em;
+}
+h1 {
+    font-size: 1.3em;
+    margin-bottom: 10px;
+}
+#notelist {
+    margin-bottom: 18px;
+    font-size: 1.1em;
+    line-height: 1.6;
+}
+#nextnote {
+    font-size: 2em;
+    color: #4a90e2;
+    margin: 24px 0 18px 0;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+label, .slider-label {
+    font-size: 1em;
+    margin-right: 10px;
+}
+input[type="range"] {
+    width: 180px;
+    margin: 0 10px 0 10px;
+}
+.radio-group {
+    margin: 18px 0 18px 0;
+}
+@media (max-width: 700px) {
+    .container { padding: 12px; }
+}
+.note-chip {
+    display: inline-block;
+    background: #e3eafc;
+    color: #2d3a4a;
+    border-radius: 6px;
+    padding: 2px 10px;
+    margin: 2px 4px 2px 0;
+    font-size: 0.98em;
+    border: 1px solid #b3c6e6;
+    font-family: inherit;
+}
+.title {
+    font-size: 1.8em;
+    font-weight: 700;
+    text-align: center;
+    color: #4a90e2;
+    margin-bottom: 20px;
+}
+.section-header {
+    font-size: 1.15em;
+    font-weight: 600;
+    margin: 20px 0 10px;
+    color: #333;
+}
+</style>
+</head>
 <body>
-
-<h1 id="notelist"></h1>
-<h1 id="nextnote"></h1>
-<input type="number" id="notedelay" name="notedelay" value=500>
-
+<div class="container">
+    <div class="title">Guitar Note Trainer</div>
+    <div class="info-box">
+        <div style="margin-top: 12px; font-size: 0.98em;">
+            <strong>Note lists:</strong><br>
+            <span style="display: block; margin-bottom: 4px;"><strong>Natural:</strong> 
+                <span class="note-chip">A</span>
+                <span class="note-chip">B</span>
+                <span class="note-chip">C</span>
+                <span class="note-chip">D</span>
+                <span class="note-chip">E</span>
+                <span class="note-chip">F</span>
+                <span class="note-chip">G</span>
+            </span>
+            <span style="display: block;"><strong>All notes (with equivalences):</strong> 
+                <span class="note-chip">A♭ / G#</span>
+                <span class="note-chip">A</span>
+                <span class="note-chip">A# / B♭</span>
+                <span class="note-chip">B / C♭</span>
+                <span class="note-chip">C / B#</span>
+                <span class="note-chip">C# / D♭</span>
+                <span class="note-chip">D</span>
+                <span class="note-chip">D# / E♭</span>
+                <span class="note-chip">E / F♭</span>
+                <span class="note-chip">F / E#</span>
+                <span class="note-chip">F# / G♭</span>
+                <span class="note-chip">G</span>
+            </span>
+        </div>
+    </div>
+    <div class="section-header">Shuffled note lists</div>
+    <div style="margin-bottom:14px;">Find each note on the same string, then pick the next string. The lists reshuffle every time you refresh the page.</div>
+    <div id="notelist"></div>
+    <div class="section-header">Interval training</div>
+    <div style="margin-bottom:14px;">At the interval you set below, a random note and string number will appear. Play that note on the specified string before the next prompt.</div>
+    <div class="radio-group">
+        <label><input type="radio" name="notemode" value="natural" checked> Natural notes only</label>
+        <label><input type="radio" name="notemode" value="full"> All notes (with accidentals)</label>
+    </div>
+    <div class="slider-label">
+        <label for="notedelay">Delay (ms): <span id="delayval">500</span></label>
+        <input type="range" id="notedelay" name="notedelay" min="200" max="10000" value="500" step="50">
+    </div>
+    <h1 id="nextnote"></h1>
+</div>
 <script type="text/javascript">
 let natural = ['A', 'B', 'C', 'D','E', 'F', 'G']
-let accidentals=[]
-for(let c of natural){
-    accidentals.push(c+"#")
-    accidentals.push(c)
-    accidentals.push(c+"♭")
+let accidentals=[
+  "A♭ / G#",
+  "A",
+  "A# / B♭",
+  "B / C♭",
+  "C / B#",
+  "C# / D♭",
+  "D",
+  "D# / E♭",
+  "E / F♭",
+  "F / E#",
+  "F# / G♭",
+  "G"
+]
+function shuffle(arr) {
+    return arr
+        .map(value => ({ value, sort: Math.random() }))
+        .sort((a, b) => a.sort - b.sort)
+        .map(({ value }) => value)
 }
 
+let naturalShuffled = shuffle(natural)
+let accidentalsShuffled = shuffle(accidentals)
 
-accidentals = accidentals.filter(v => v !== 'B#')
-accidentals = accidentals.filter(v => v !== 'C♭')
+document.getElementById('notelist').innerHTML =
+    '<strong>Natural:</strong> ' + naturalShuffled.map(n => `<span class="note-chip">${n}</span>`).join('') +
+    "<span style='display: block; margin-top: 8px;'><strong>All notes:</strong> " + accidentalsShuffled.map(n => `<span class=\"note-chip\">${n}</span>`).join('') + "</span>";
 
-accidentals = accidentals.filter(v => v !== 'E#')
-accidentals = accidentals.filter(v => v !== 'F♭')
+let currentMode = 'natural';
+let noteList = naturalShuffled;
+let note = noteList[Math.floor(Math.random() * noteList.length)]
+let timer = null;
 
-natural = natural
-    .map(value => ({ value, sort: Math.random() }))
-    .sort((a, b) => a.sort - b.sort)
-    .map(({ value }) => value)
-   
-accidentals = accidentals
-    .map(value => ({ value, sort: Math.random() }))
-    .sort((a, b) => a.sort - b.sort)
-    .map(({ value }) => value)
-   
-    console.log(accidentals)
-    console.log(accidentals)
-document.getElementById('notelist').innerHTML =natural.join(", ")+"<span style = 'display: block;'>"+accidentals.join(", ")+"</span>";
-let note=natural[Math.floor(Math.random() * natural.length)]
-document.getElementById('nextnote').innerHTML =note+" @"+(1+Math.floor(Math.random() * 6))
-let delay=parseInt(document.getElementById('notedelay').value)
-window.setTimeout(() => {
-    setNext()
-}, delay);
-
-function setNext()
-{
-    document.getElementById('nextnote').innerHTML =note+" @"+(1+Math.floor(Math.random() * 6))
-    let delay=parseInt(document.getElementById('notedelay').value)
-    window.setTimeout(() => {
-    setNext()
-}, delay);
+function pickNote() {
+    note = noteList[Math.floor(Math.random() * noteList.length)]
+    let stringNum = 1 + Math.floor(Math.random() * 6)
+    document.getElementById('nextnote').innerHTML = note + " @" + stringNum
 }
 
+function setNext() {
+    pickNote();
+    let delay = parseInt(document.getElementById('notedelay').value)
+    timer = window.setTimeout(setNext, delay);
+}
+
+function updateDelayLabel() {
+    document.getElementById('delayval').textContent = document.getElementById('notedelay').value;
+}
+
+document.getElementById('notedelay').addEventListener('input', function() {
+    updateDelayLabel();
+    if (timer) {
+        clearTimeout(timer);
+        setNext();
+    }
+});
+
+Array.from(document.getElementsByName('notemode')).forEach(radio => {
+    radio.addEventListener('change', function() {
+        currentMode = this.value;
+        noteList = (currentMode === 'natural') ? naturalShuffled : accidentalsShuffled;
+        if (timer) {
+            clearTimeout(timer);
+            setNext();
+        }
+    });
+});
+
+// Initial setup
+updateDelayLabel();
+setNext();
 </script>
 </body>
 </html>
