Add scale viewer

--- a/notes.html
+++ b/notes.html
@@ -121,6 +121,8 @@ input[type="range"] {
     <div class="title">Guitar Note Trainer</div>
     <div style="text-align:center; margin-top:-10px; margin-bottom:20px;">
         <a href="index.html" style="color:#4a90e2; text-decoration:none; font-size:0.9em;">← Back to main page</a>
+        <span style="margin: 0 10px; color:#ccc;">|</span>
+        <a href="scales.html" style="color:#4a90e2; text-decoration:none; font-size:0.9em;">Scale Reference →</a>
     </div>
     <div class="info-box">
         <div style="margin-top: 12px; font-size: 0.98em;">
