--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
     <div class="container">
         <h1>YouTube Video Player with USB Pedal Support</h1>
         <p style="margin-top:-10px; margin-bottom:30px;">
-            <a href="notes.html" style="color:#667eea; text-decoration:none; font-weight:600;">Try the Guitar Note Trainer →</a>
+            <a href="notes.html" style="color:#667eea; text-decoration:none; font-weight:600;">Note Trainer</a>
+            <span style="margin: 0 10px; color:#ccc;">|</span>
+            <a href="scales.html" style="color:#667eea; text-decoration:none; font-weight:600;">Scale Reference</a>
         </p>
         
         <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
